--- a/.github/workflows/helloworld.yaml
+++ b/.github/workflows/helloworld.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       -main
-  pull request:
+  pull_request:
     branches:
       -main
   workflow_dispatch:
@@ -13,14 +13,14 @@ jobs:
   hello:
     runs-on: ubuntu-latest
     steps:
-      -uses: actions/checkout@v2
-      -name: hello world
-      run: echo "hello world"
-      shell: bash
+      - uses: actions/checkout@v2
+      - name: hello world
+        run: echo "hello world"
+        shell: bash
   goodbye:
     runs-on: ubuntu-latest
     steps:
-      -name: goodbye world
-      run: echo "goodbye world"
-      shell: bash
+      - name: goodbye world
+        run: echo "goodbye world"
+        shell: bash
     
