--- a/.github/workflows/helloworld.yaml
+++ b/.github/workflows/helloworld.yaml
@@ -11,14 +11,14 @@ on:
 
 jobs:
   hello:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - name: hello world
         run: echo "hello world"
         shell: bash
   goodbye:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: goodbye world
         run: echo "goodbye world"
