--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   comment-with-action:
+    permissions: write-all
     runs-on: windows-latest
     steps:
       - name: "dump github conext"
