--- a/.github/workflows/testcode.yaml
+++ b/.github/workflows/testcode.yaml
@@ -8,11 +8,15 @@ on:
 
 jobs:
   test_pull_request:
-    runs-on: ubuntu_latest
+    runs-on: windows_latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: setup node
+        uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm ci
-      - run: npm run htmlvalidate
+      - name: download npm
+        run: npm ci
+      - name: run html tests
+        run: npm run htmlvalidate
