--- a/.github/workflows/testcode.yaml
+++ b/.github/workflows/testcode.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test_pull_request:
-    runs-on: windows_latest
+    runs-on: windows-latest
     steps:
       - name: checkout
         uses: actions/checkout@v2
